--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -254,6 +254,16 @@
     line-height: 1.2;
   }
 
+  .skills-item-title {
+    @include sans_bold;
+    margin: 0 0 0.75rem;
+    font-size: 1.5rem;
+    letter-spacing: -0.05rem;
+    line-height: 1.2;
+    display: inline;
+    box-shadow: inset 0 -10px 0 #b7e0ff;
+  }
+
   .resume-item-details {
     font-size: 0.9rem;
     margin: 0 0 0.5rem;
