--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -112,8 +112,9 @@
         <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
           <meta itemprop="creator" content="{{ site.resume_name }}" itemtype="http://schema.org/Person" />
           <h3 class="resume-item-title" itemprop="name">
-            {% if project.url %}<a href="{{ project.url }}" itemprop="url">{{ project.project }}</a>{% else %}{{
-            project.project }}{% endif %}
+            {% if project.url %}<a href="{{ project.url }}" itemprop="url" target="_blank" rel="noopener noreferrer"
+              >{{ project.project }}</a
+            >{% else %}{{ project.project }}{% endif %}
           </h3>
           <h4 class="resume-item-details" itemprop="description">
             {{ project.role }} {% if project.links %} {% for link in project.links%} &bull;<span> {{link}} </span>
